# Programmentwurf_2

./: CMakeLists.txt  main.cpp
include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
logo/: junior_logo.txt  senior_logo.txt
src/: developer.cpp  junior_developer.cpp  senior_developer.cpp
test/: CMakeLists.txt  test_developer.cpp
